--- a/src/yolov7/runs/train/yolov7-cbam-agnostic+single_label/opt.yaml
+++ b/src/yolov7/runs/train/yolov7-cbam-agnostic+single_label/opt.yaml
@@ -25,7 +25,7 @@ local_rank: -1
 workers: 4
 project: runs/train
 entity: null
-name: yolov7-cbam
+name: yolov7-cbam-agnostic+single_label
 exist_ok: false
 quad: false
 linear_lr: false
@@ -39,5 +39,5 @@ freeze:
 v5_metric: false
 world_size: 1
 global_rank: -1
-save_dir: runs/train/yolov7-cbam16
+save_dir: runs/train/yolov7-cbam-agnostic+single_label
 total_batch_size: 16
